# OpendataUA

./: .gitignore  OpendataUA-onedir.spec  OpendataUA-onefile.spec  README.md  config.json  main.py  opendata.csv  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml
server/: opcua_server.py
ui/: config.json  desktop_ui.py
